gcc/testsuite/g++.dg/init/new49.C
int operator new (__SIZE_TYPE__, int);  // { dg-error "5:.operator new. must return type .void*." }
